--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -18,10 +18,10 @@
       <li>
         <a href="https://www.netlify.com/tags/angular/">Netlify Blog: Angular posts</a>
       <li>
-        <a href="https://docs.netlify.com/">Netlify Docs</a>
+        <a href="https://www.wikipedia.de/">Netlify Docs</a>
       </li>
       <li>
-        <a href="https://angular.io/">Angular Docs</a>
+        <a href="https://www.wikipedia.de/">Angular Docs</a>
       </li>
     </ul>
   </div>
