--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,22 +6,22 @@
       <img src="https://user-images.githubusercontent.com/43764894/223549637-2715c89d-a44e-42e0-8f6c-fa6246279658.png">
     </div>
     <h2>
-      This is a bare-bones Angular project that has everything you need to quickly deploy it to Netlify
+      Bis in ein paar Tagen! <3
     </h2>
     <div class="bttns">
-      <a href="https://app.netlify.com/start/deploy?repository=https://github.com/netlify-templates/angular-quickstart" class="bttn primary">Deploy to Netlify</a>
-      <a href="https://github.com/netlify-templates/angular-quickstart" class="bttn secondary">View Repo</a>
+      <a href="https://www.wikipedia.de" class="bttn primary">Diese Website empfehle ich</a>
+      <a href="https://www.wikipedia.de" class="bttn secondary">Die hier auch!</a>
     </div>
   </div>
   <div class="resource-list">
     <ul>
       <li>
-        <a href="https://www.netlify.com/tags/angular/">Netlify Blog: Angular posts</a>
+        <a href="https://www.wikipedia.de">Und die erst!</a>
       <li>
-        <a href="https://www.wikipedia.de/">Netlify Docs</a>
+        <a href="https://www.wikipedia.fr/">tu ne le croiras pas</a>
       </li>
       <li>
-        <a href="https://www.wikipedia.de/">Angular Docs</a>
+        <a href="https://www.wikipedia.de/">guess what</a>
       </li>
     </ul>
   </div>
