--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,8 +9,7 @@
       Bis in ein paar Tagen! <3
     </h2>
     <div class="bttns">
-      <a href="https://www.wikipedia.de" class="bttn primary">Diese Website empfehle ich</a>
-      <a href="https://www.wikipedia.de" class="bttn secondary">Die hier auch!</a>
+      <a href="https://www.wikipedia.de" class="bttn secondary">Diese Website empfehle ich</a>
     </div>
   </div>
   <div class="resource-list">
