--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,14 +9,14 @@
       Bis in ein paar Tagen! <3
     </h2>
     <div class="bttns">
-      <a href="https://app.netlify.com/start/deploy?repository=https://github.com/netlify-templates/angular-quickstart" class="bttn primary">Deploy to Netlify</a>
-      <a href="https://github.com/netlify-templates/angular-quickstart" class="bttn secondary">View Repo</a>
+      <a href="https://www.wikipedia.de" class="bttn primary">Deploy to Netlify</a>
+      <a href="https://www.wikipedia.de" class="bttn secondary">View Repo</a>
     </div>
   </div>
   <div class="resource-list">
     <ul>
       <li>
-        <a href="https://www.netlify.com/tags/angular/">Netlify Blog: Angular posts</a>
+        <a href="https://www.wikipedia.de/">Netlify Blog: Angular posts</a>
       <li>
         <a href="https://www.wikipedia.de/">Diese Website empfehle ich</a>
       </li>
