--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,19 +9,19 @@
       Bis in ein paar Tagen! <3
     </h2>
     <div class="bttns">
-      <a href="https://www.wikipedia.de" class="bttn primary">Deploy to Netlify</a>
-      <a href="https://www.wikipedia.de" class="bttn secondary">View Repo</a>
+      <a href="https://www.wikipedia.de" class="bttn primary">Diese Website empfehle ich</a>
+      <a href="https://www.wikipedia.de" class="bttn secondary">Und die erst!</a>
     </div>
   </div>
   <div class="resource-list">
     <ul>
       <li>
-        <a href="https://www.wikipedia.de/">Netlify Blog: Angular posts</a>
+        <a href="https://www.wikipedia.de/">auch spannend...</a>
       <li>
-        <a href="https://www.wikipedia.de/">Diese Website empfehle ich</a>
+        <a href="https://www.wikipedia.fr/">tu ne le croiras pas</a>
       </li>
       <li>
-        <a href="https://www.wikipedia.de/">Und die erst!</a>
+        <a href="https://www.wikipedia.de/">Wikipedia</a>
       </li>
     </ul>
   </div>
