--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,7 @@
   <div class="header">
     <h1>Hey Maite, schönen Urlaub dir! :)</h1>
     <div class="logo">
-      <img src="![signal-2024-05-24-224124](https://github.com/nicolas-froehlich/angular-quickstart/assets/78079455/c480c3f1-e652-47df-8372-1fae0d4ea662)">
+      <img src="https://github.com/nicolas-froehlich/angular-quickstart/assets/78079455/c480c3f1-e652-47df-8372-1fae0d4ea662">
     </div>
     <h2>
       Bis in ein paar Tagen! <3
