bizzness Website für Lennart

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,27 +1,27 @@
 <svg id="background" width='1728' height='1235' viewBox="0 0 1728 1235" fill='none' xmlns='http://www.w3.org/2000/svg'><g opacity='0.75' filter='url(#filter0_f_39_143)'><circle cy='1000' r='264' fill='url(#paint0_linear_39_143)'/></g><g opacity='0.65' filter='url(#filter1_f_39_143)'><circle cx='1720' cy='264' r='379' fill='url(#paint1_linear_39_143)'/></g><defs><filter id='filter0_f_39_143' x='-485' y='515' width='970' height='970' filterUnits='userSpaceOnUse' color-interpolation-filters='sRGB'><feFlood flood-opacity='0' result='BackgroundImageFix'/><feBlend mode='normal' in='SourceGraphic' in2='BackgroundImageFix' result='shape'/><feGaussianBlur stdDeviation='110.5' result='effect1_foregroundBlur_39_143'/></filter><filter id='filter1_f_39_143' x='1120' y='-336' width='1200' height='1200' filterUnits='userSpaceOnUse' color-interpolation-filters='sRGB'><feFlood flood-opacity='0' result='BackgroundImageFix'/><feBlend mode='normal' in='SourceGraphic' in2='BackgroundImageFix' result='shape'/><feGaussianBlur stdDeviation='110.5' result='effect1_foregroundBlur_39_143'/></filter><linearGradient id='paint0_linear_39_143' x1='196.5' y1='902' x2='-2.55853e-05' y2='1264' gradientUnits='userSpaceOnUse'><stop stop-color="var(--bttm-left-blur-1)"/><stop offset='1' stop-color="var(--bttm-left-blur-2)"/></linearGradient><linearGradient id='paint1_linear_39_143' x1='1720' y1='-115' x2='1720' y2='643' gradientUnits='userSpaceOnUse'><stop stop-color="var(--top-right-blur-1)"/><stop offset='1' stop-color="var(--top-right-blur-2)" /></linearGradient></defs></svg>     
 <div id="content">
   <div class="header">
-    <h1>Hey Maite, schönen Urlaub dir! :)</h1>
+    <h1>Hey, du! Werde jetzt schnell reich mit Aktien und so! Scroll weiter!</h1>
     <div class="logo">
-      <img src="https://github.com/nicolas-froehlich/angular-quickstart/assets/78079455/c480c3f1-e652-47df-8372-1fae0d4ea662">
+      <img src="https://github.com/nicolas-froehlich/angular-quickstart/assets/78079455/36a16733-db8e-4583-bc4b-f82c808c21a1">
     </div>
     <h2>
-      Bis in ein paar Tagen! <3
+      Guck das Geld hier. Alles deins wenn du den Link hier klicken tust. Es ist so einfach!
     </h2>
     <div class="bttns">
-      <a href="https://www.wikipedia.de" class="bttn primary">Diese Website empfehle ich</a>
-      <a href="https://www.wikipedia.de" class="bttn secondary">Und die erst!</a>
+      <a href="https://www.wikipedia.de" class="bttn primary">Klick hier!</a>
+      <a href="https://www.wikipedia.de" class="bttn secondary">Wenn du das hier ließt wirst du reich</a>
     </div>
   </div>
   <div class="resource-list">
     <ul>
       <li>
-        <a href="https://www.wikipedia.de/">auch spannend...</a>
+        <a href="https://www.wikipedia.de/">es kann so einfach sein. Im GELD schwimmen!</a>
       <li>
         <a href="https://www.wikipedia.fr/">tu ne le croiras pas</a>
       </li>
       <li>
-        <a href="https://www.wikipedia.de/">Wikipedia</a>
+        <a href="https://www.wikipedia.de/">further reading</a>
       </li>
     </ul>
   </div>
