--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,16 +1,19 @@
 <svg id="background" width='1728' height='1235' viewBox="0 0 1728 1235" fill='none' xmlns='http://www.w3.org/2000/svg'><g opacity='0.75' filter='url(#filter0_f_39_143)'><circle cy='1000' r='264' fill='url(#paint0_linear_39_143)'/></g><g opacity='0.65' filter='url(#filter1_f_39_143)'><circle cx='1720' cy='264' r='379' fill='url(#paint1_linear_39_143)'/></g><defs><filter id='filter0_f_39_143' x='-485' y='515' width='970' height='970' filterUnits='userSpaceOnUse' color-interpolation-filters='sRGB'><feFlood flood-opacity='0' result='BackgroundImageFix'/><feBlend mode='normal' in='SourceGraphic' in2='BackgroundImageFix' result='shape'/><feGaussianBlur stdDeviation='110.5' result='effect1_foregroundBlur_39_143'/></filter><filter id='filter1_f_39_143' x='1120' y='-336' width='1200' height='1200' filterUnits='userSpaceOnUse' color-interpolation-filters='sRGB'><feFlood flood-opacity='0' result='BackgroundImageFix'/><feBlend mode='normal' in='SourceGraphic' in2='BackgroundImageFix' result='shape'/><feGaussianBlur stdDeviation='110.5' result='effect1_foregroundBlur_39_143'/></filter><linearGradient id='paint0_linear_39_143' x1='196.5' y1='902' x2='-2.55853e-05' y2='1264' gradientUnits='userSpaceOnUse'><stop stop-color="var(--bttm-left-blur-1)"/><stop offset='1' stop-color="var(--bttm-left-blur-2)"/></linearGradient><linearGradient id='paint1_linear_39_143' x1='1720' y1='-115' x2='1720' y2='643' gradientUnits='userSpaceOnUse'><stop stop-color="var(--top-right-blur-1)"/><stop offset='1' stop-color="var(--top-right-blur-2)" /></linearGradient></defs></svg>     
 <div id="content">
   <div class="header">
-    <h1>Guck der kann auch nicht schlafen (: </h1>
+    <h1>Moin Tilman! :)</h1>
     <div class="logo">
-      <img src="https://github.com/nicolas-froehlich/angular-quickstart/assets/78079455/4c1f9661-e89c-4924-9af1-eb6613891edb">
+      <img src="https://github.com/nicolas-froehlich/personal-website/assets/78079455/4a79bc82-ce94-4443-a1e2-806744936822">
     </div>
     <h2>
-      Aber um 04 Uhr ists dann vielleicht langsam Zeit, oder? :D
+      Meld dich auf jeden Fall fürs GeoBeer in Zürich an falls du Zeit hast. Ist sehr interessant und macht Spaß.
     </h2>
     <div class="bttns">
-      <a href="https://de.wikipedia.org/wiki/Lemuren" class="bttn primary">Coole Tiere</a>
-      <a href="https://www.wikipedia.de" class="bttn secondary"></a>
+      <a href="https://www.geobeer.ch/" class="bttn primary">Link zur GeoBeer website</a>
+      <a href="https://ti.to/geobeer/43" class="bttn secondary">Link zur Registrierung</a>
+    <h2>
+      Die Registrierung startet am 06.06 um 17 Uhr und die Plätze sind schnell weg ⚡️
+    </h2>
     </div>
   </div>
   <div class="resource-list">
@@ -21,7 +24,7 @@
         <a href="https://www.wikipedia.fr/"></a>
       </li>
       <li>
-        <a href="https://www.wikipedia.de/">further reading</a>
+        <a href="https://www.wikipedia.de/">Wikipedia</a>
       </li>
     </ul>
   </div>
