--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,7 +6,7 @@
       <img src="https://github.com/nicolas-froehlich/personal-website/assets/78079455/4a79bc82-ce94-4443-a1e2-806744936822">
     </div>
     <div class="shiny-app">
-      <iframe src="https://yourname.shinyapps.io/yourapp" width="100%" height="800px"></iframe>
+      <iframe src="https://nicolas-froehlich.shinyapps.io/MapScapingMap/" width="100%" height="800px"></iframe>
     </div>
     <h2>
       Meld dich auf jeden Fall fürs GeoBeer in Zürich an falls du Zeit hast. Ist sehr interessant und macht Spaß.
