--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,6 +8,33 @@
     <div class="shiny-app">
       <iframe src="https://nicolas-froehlich.shinyapps.io/MapScapingMap/" width="100%" height="800px"></iframe>
     </div>
+
+
+    <h2>
+      Hei Lisa, Grattis på födelsedagen!
+    </h2>
+      <div class="logo">
+      <img src="https://github.com/nicolas-froehlich/personal-website/assets/78079455/f1c068f3-97b7-45eb-b1a8-9ab4deddd470">
+      </div>
+
+    <h2>
+      Ich hoffe du siehst gerade so 👆 aus und hast heute ganz viel davon 👇 vor :)
+    </h2>
+      <div class="logo">
+      <img src="https://github.com/nicolas-froehlich/personal-website/assets/78079455/f5ea94a5-184f-4d4b-b791-c426c3de4ced">
+      </div>
+
+   <h2>
+      Oder alternativ bist du gerade auf dem Weg ans Meer 😎
+   </h2>
+      <div class="logo">
+      <img src="https://github.com/nicolas-froehlich/personal-website/assets/78079455/f4f1676a-f7d8-4515-8ff3-f0ce9bc49e38">
+      </div>
+    
+   <h2>
+      Habs auf jeden Fall ganz arg gut, wünsche Dir das Beste und freu mich dich bald wieder zu sehen :)
+   </h2>
+    
     
     <!-- <h2>
       Meld dich auf jeden Fall fürs GeoBeer in Zürich an falls du Zeit hast. Ist sehr interessant und macht Spaß.
