create everest subsite

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -48,16 +48,16 @@
     </div> -->
   </div>
   <div class="resource-list">
-   <!-- <ul>
+   <ul>
       <li>
         <a href="https://www.wikipedia.de/"></a>
       <li>
         <a href="https://www.wikipedia.fr/"></a>
       </li>
       <li>
-        <a href="https://www.wikipedia.de/">Wikipedia</a>
+        <a href="https://www.nicolas-froehlich.online/everest">Everest</a>
       </li>
-    </ul> -->
+    </ul>
   </div>
 </div>
 
