debug broken /everest path

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,6 +9,7 @@
       <iframe src="https://nicolas-froehlich.shinyapps.io/MapScapingMap/" width="100%" height="800px"></iframe>
     </div> -->
 
+    <router-outlet></router-outlet>
 
     <h1>
       Hei Lisa, Grattis på födelsedagen!
