--- a/src/app/quiz/quiz.component.html
+++ b/src/app/quiz/quiz.component.html
@@ -1,3 +1,3 @@
 <div class="shiny-app">
-    <iframe src="https://nicolas-froehlich.shinyapps.io/MapScapingMap/" width="100%" height="800px"></iframe>
+    <iframe src="https://nicolas-froehlich.shinyapps.io/aaron-quiz/" width="100%" height="800px"></iframe>
 </div>
