--- a/src/app/prague/prague.component.html
+++ b/src/app/prague/prague.component.html
@@ -1,1 +1,15 @@
-<p>Hello World</p>
+<h2>
+    Wo ist das?
+  </h2>
+    <div class="logo">
+    <img src="https://github.com/nicolas-froehlich/personal-website/assets/78079455/ea0714e5-1410-4035-bb0c-5f965fd256c6">
+    </div>
+
+
+  <div class="resource-list">
+    <ul>
+      <li>
+        <a href="https://www.wikipedia.de">Und die erst!</a>
+      </li>
+    </ul>
+  </div>
