fix link problem in popup

--- a/src/app/prague/prague.component.html
+++ b/src/app/prague/prague.component.html
@@ -1,6 +1,6 @@
-<h2>
+<h1>
     Wo ist das?
-  </h2>
+  </h1>
     <div class="logo">
     <img src="https://github.com/nicolas-froehlich/personal-website/assets/78079455/ea0714e5-1410-4035-bb0c-5f965fd256c6">
     </div>
@@ -9,7 +9,7 @@
   <div class="resource-list">
     <ul>
       <li>
-        <a href="https://www.wikipedia.de">Und die erst!</a>
+        <a href="https://www.nicolas-froehlich.online/quiz">Zurück zur Karte</a>
       </li>
     </ul>
   </div>
