--- a/src/app/quiz/quiz.component.html
+++ b/src/app/quiz/quiz.component.html
@@ -4,7 +4,7 @@
     <div class="header">
 
 <div class="shiny-app">
-    <iframe src="https://nicolas-froehlich.shinyapps.io/aaron-quiz/" width="100%" height="800px"></iframe>
+    <iframe src="https://nicolas-froehlich.shinyapps.io/aaron-quiz/" width="100%" height="100%"></iframe>
 </div>
 
 </div>
