update shiny app + quiz questions

--- a/src/app/guelb/guelb.component.html
+++ b/src/app/guelb/guelb.component.html
@@ -1,1 +1,8 @@
-<p>Hello World</p>
+<h2>
+    Welche Struktur auf der Erdoberfläche ist aus dem Weltall besonders auffällig zu sehen und wurde deshalb bei Shuttle-Missionen von Astronauten als Landmarke zur Orientierung benutzt?
+  </h2>
+
+
+  <div class="shiny-app">
+    <iframe src="https://nicolas-froehlich.shinyapps.io/aaron-quiz/" width="800px" height="800px"></iframe>
+</div>
