--- a/src/app/prague/prague.component.html
+++ b/src/app/prague/prague.component.html
@@ -6,10 +6,6 @@
     </div>
 
 
-  <div class="resource-list">
-    <ul>
-      <li>
-        <a href="https://www.nicolas-froehlich.online/quiz">Zurück zur Karte</a>
-      </li>
-    </ul>
+  <div class="shiny-app">
+    <iframe src="https://nicolas-froehlich.shinyapps.io/aaron-quiz/" width="800px" height="800px"></iframe>
   </div>
