finalize aaron quiz

--- a/src/app/prague/prague.component.html
+++ b/src/app/prague/prague.component.html
@@ -1,6 +1,6 @@
-<h1>
+<h2>
     Wo ist das?
-  </h1>
+  </h2>
     <div class="logo">
     <img src="https://github.com/nicolas-froehlich/personal-website/assets/78079455/ea0714e5-1410-4035-bb0c-5f965fd256c6">
     </div>
@@ -9,3 +9,8 @@
   <div class="shiny-app">
     <iframe src="https://nicolas-froehlich.shinyapps.io/aaron-quiz/" width="800px" height="800px"></iframe>
   </div>
+
+
+  <h2>
+    Du hast das Quiz bestanden! 🥳 Es gibt noch ein paar Bonusstädte mit fun facts. 
+  </h2>
