--- a/src/app/quiz/quiz.component.html
+++ b/src/app/quiz/quiz.component.html
@@ -3,11 +3,12 @@
 <div id="content">
 
     <h1>
-        hey Aaron, das ist dein Geburstagsquiz!
+        Hey Aaron, das ist dein Geburstagsquiz! 🥳
       </h1>
 
       <h2>
         Los gehts!
+      
         Welcher Ort liegt mehr als 8700m über dem Meeresspiegel?
       </h2>
 
