--- a/src/app/sansibar/sansibar.component.html
+++ b/src/app/sansibar/sansibar.component.html
@@ -1,10 +1,10 @@
-<h1>
+<h2>
     Welche afrikanische Insel gehörte noch bis 1861 zum Sultanat Oman?
-  </h1>
+  </h2>
 
 
   <div class="resource-list">
     <div class="shiny-app">
-      <iframe src="https://nicolas-froehlich.shinyapps.io/aaron-quiz/" width="800px" height="800px"></iframe>
+      <iframe src="https://nicolas-froehlich.shinyapps.io/aaron-quiz/" width="800px" height="800px" style="border:none;"></iframe>
   </div>
   </div>
