--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,9 +2,9 @@
 <div id="content">
   <div class="header">
     <h1>MapScaping Map</h1>
-    <div class="logo">
-      <img src="https://github.com/nicolas-froehlich/personal-website/assets/78079455/4a79bc82-ce94-4443-a1e2-806744936822">
-    </div>
+<!--     <div class="logo">
+      <img src="https://github.com/nicolas-froehlich/personal-website/assets/-------example------">
+    </div> -->
     <div class="shiny-app">
       <iframe src="https://nicolas-froehlich.shinyapps.io/MapScapingMap/" width="100%" height="800px"></iframe>
     </div>
