--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,8 +5,8 @@
 <!--     <div class="logo">
       <img src="https://github.com/nicolas-froehlich/personal-website/assets/-------example------">
     </div> -->
-    <div class="shiny-app">
-      <iframe src="https://nicolas-froehlich.shinyapps.io/MapScapingMap/" width="100%" height="800px"></iframe>
+    <div class="shiny-app" style="width: 100vw;"></div>
+      <iframe src="https://nicolas-froehlich.shinyapps.io/MapScapingMap/" width="100%" height="800px" style="border: none;"></iframe>
     </div>
 
     <router-outlet></router-outlet>
