include explain text & world map as favicon

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,6 +2,8 @@
 <div id="content">
   <div class="header">
     <h1>MapScaping Map</h1>
+    <p>This map shows locations and additional information about all of Daniel's interview partners in the <a href="https://mapscaping.com/"></a>MapScaping</a> podcast. 🗺️ 🌐 🎙️ 
+      The code to create the data set and the map can be found at <a href="https://github.com/nicolas-froehlich/mapscapingmap">GitHub</a>.</p>
 <!--     <div class="logo">
       <img src="https://github.com/nicolas-froehlich/personal-website/assets/-------example------">
     </div> -->
