--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,3 +1,52 @@
+/* Make iframes responsive */
+.iframe-container {
+  width: 100%;
+  max-width: 100%;
+  overflow: auto;
+}
+
+.responsive-iframe {
+  width: 100%;
+  height: 70vh;
+  border: none;
+}
+
+/* Responsive Design */
+@media screen and (max-width: 768px) {
+  .header h1 {
+    font-size: 1.5rem;
+    text-align: center;
+  }
+
+  .header p {
+    font-size: 1rem;
+    padding: 0 10px;
+    text-align: center;
+  }
+
+  .responsive-iframe {
+    height: 50vh;
+  }
+}
+
+@media screen and (max-width: 480px) {
+  .header h1 {
+    font-size: 1.2rem;
+  }
+
+  .header p {
+    font-size: 0.9rem;
+  }
+
+  .responsive-iframe {
+    height: 40vh;
+  }
+}
+
+
+
+
+
 .logo img {
   padding: 30px 0;
   width: 100%;
