--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -37,19 +37,18 @@
       <a href="https://github.com/nicolas-froehlich/mapscapingmap">GitHub</a>.
     </p>
 
-    <div class="shiny-app iframe-container">
-      <iframe src="https://nicolas-froehlich.shinyapps.io/MapScapingMap/" class="responsive-iframe"></iframe>
+    <div class="shiny-app" style="width: 100vw;">
+      <iframe src="https://nicolas-froehlich.shinyapps.io/MapScapingMap/" width="100%" height="800px" style="border: none;"></iframe>
     </div>
     
     <!-- Embed the interactive Potsdam map -->
-    <div class="interactive-map iframe-container">
+    <div class="interactive-map">
       <h2>Potsdam EU 24 Interactive Map</h2>
-      <iframe src="assets/potsdam_eu_24.html" class="responsive-iframe"></iframe>
+      <iframe src="assets/potsdam_eu_24.html" width="90%" height="90%" style="border: none;"></iframe>
     </div>
 
     <router-outlet></router-outlet>
 </div>
-
 
 <!-- 
     <h1>
