back to original

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -44,7 +44,7 @@
     <!-- Embed the interactive Potsdam map -->
     <div class="interactive-map">
       <h2>Potsdam EU 24 Interactive Map</h2>
-      <iframe src="assets/potsdam_eu_24.html" width="90%" height="90%" style="border: none;"></iframe>
+      <iframe src="assets/potsdam_eu_24.html" width="100%" height="800px" style="border: none;"></iframe>
     </div>
 
     <router-outlet></router-outlet>
